# Robot

./: .gitignore  .gitmodules  Makefile  README.md  params.yaml  paramsDriving.yaml  paramsMotor.yaml  paramsMotor2.yaml
config/: example.json
docker/compose/: bot-simulation.yml  driving.yml  lidar.yml
docker/ros2-base/: Dockerfile  entrypoint.sh
docker/ros2-dev/: Dockerfile  entrypoint.sh
docker/ros2-flask/: Dockerfile
docker/ros2-gazebo/: Dockerfile  entrypoint.sh
docker/ros2-robot/: Dockerfile  entrypoint.sh
docker/ubuntu-dev/: Dockerfile
launch/: launch_controller.py  launch_dynamic.py  launch_example.py  launch_robot.py
launch/config/: baseStation.json  basicRobot.json  example.json
ros2_ws/src/gps_v2/: package.xml  setup.cfg  setup.py
ros2_ws/src/gps_v2/gps_v2/: gpsNode.py
ros2_ws/src/pirobot-base/: package.xml  setup.cfg  setup.py
ros2_ws/src/pirobot-base/pirobot-base/: cameraNode.py  motorNode.py
ros2_ws/src/pirobot_base/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/pirobot_base/pirobot_base/: DriveCommandNode.py  JoystickNode.py  LidarProcessor.py  ServoCommand.py  cameraNode.py  contNode.py  controllerNode.py  drivingNodes.py  gpsNode.py  imuNode.py  lidarPlotterNode.py  motorNode.py  robotLauncher.py  servoNode.py
ros2_ws/src/pirobot_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/pirobot_cpp/src/: ros2_cpp_code.cpp
ros2_ws/src/pirobot_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/pirobot_visual/: package.xml  setup.cfg  setup.py
ros2_ws/src/pirobot_web/: package.xml  setup.cfg  setup.py
(+18 files in other folders)
